--- a/style.css
+++ b/style.css
@@ -3,17 +3,35 @@ body {
     font-size: 16px;
 }
 
+header {
+    background:linear-gradient(45deg,rgba(19, 41, 97, 0.979),rgba(35, 59, 121, 0.486)),url(./images/jovan.jpg);
+    background-position: center; 
+    background-repeat: no-repeat; 
+    background-size: cover;
+    height: 100vh;
+}
+
+nav {
+    display: flex;
+    align-items: center;
+}
+
 #logo {
-    font-size: 2em;
+    font-size: 1.2em;
     font-weight: 900;
-    float: left;
+    color: #fff;
 }
 
 #navigation {
-    float: right;
+    font-size: 0.7em;
 }
 
 #navigation ul li {
     list-style: none;
     display: inline;
+}
+
+ul a {
+    text-decoration: none;
+    color: #fff;
 }
